--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>在线图片加水印，canvas加水印,防止身份证复印件被盗</title>
+  <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/Apocalypsor/watermark/src/assets/favicon.png">
   <meta name="keywords" content="图片加水印,在线给图片加水印,在线照片加水印,在线给图片加文字,canvas加水印,canvas图片旋转,防止身份证复印件被盗" />
   <meta name="description" content="在线给图片加水印，通过前端canvas给你的个人证件加上水印，防止身份证复印件被盗。纯前端加水印，拒绝上传保证个人信息安全！" />
   <link rel="stylesheet" href="index.css" />
